# nephthys

./: pyproject.toml
nephthys/: __main__.py
nephthys/database/: raw_migration.py
nephthys/tasks/: daily_stats.py
nephthys/transcripts/: __init__.py
nephthys/transcripts/transcripts/: treasure_hunt.py
nephthys/utils/graphs/: pie.py
nephthys/views/home/components/: ticket_status_pie.py
