[project]
name = "nephthys"
version = "0.1.0"
description = "Slack support bot for Hack Club's help channels"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.14",
    "apscheduler>=3.10.4",
    "astral>=3.2",
    "blockkit>=2.1.2",
    "numpy>=2.3.1",
    "openai>=2.8.0",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-exporter-otlp>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "piccolo[postgres,uvloop]>=1.33.0",
    "prometheus-client>=0.23.1",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "pytz>=2026.2",
    "slack-bolt>=1.23.0",
    "starlette>=1.3.1",
    "starlette-exporter>=0.23.0",
    "thefuzz>=0.22.1",
    "uvicorn>=0.34.0",
    "uvloop>=0.21.0",
]

[project.scripts]
nephthys = "nephthys.__main__:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pre-commit>=4.1.0"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.hatch.envs.default]
path = "./.venv/"
